Modify tsconfig.json to enhance TypeScript support
Updated the include and exclude fields in tsconfig.json to support TypeScript files and exclude node_modules and dist directories.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+
   "compilerOptions": {
     "strictNullChecks": false,
     "baseUrl": ".",
@@ -8,6 +8,19 @@
       "@/*": ["./src/*"]
     }
   },
+
+  "include": [
+    "env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ],
+
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
 
   "references": [
     {
